# plex-organizer

./: .gitignore  README.md  config.yaml  organize_plex.py  pyproject.toml
plex_organizer/: __init__.py  cleanup.py  cli.py  config.py  organizer.py  parser.py  plex.py  tmdb.py  tv_cleanup.py
tests/: test_parser.py
