[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plex-organizer"
version = "1.0.0"
description = "CLI tool to organize media files into Plex naming conventions with genre folders"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Gideon", email = "gideon@example.com"},
]
keywords = ["plex", "media", "organizer", "movies", "tv", "tmdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
plex-organizer = "plex_organizer.cli:main"

[project.urls]
Homepage = "https://github.com/gideon/plex-organizer"
Issues = "https://github.com/gideon/plex-organizer/issues"

[tool.setuptools.packages.find]
include = ["plex_organizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
